merge branch 'dev' into 'async'